@@ -264,6 +264,7 @@ enum
   OPT_COPY,
   OPT_DELETE,
   OPT_FORWEDIT,
+  OPT_FCCATTACH,
   OPT_INCLUDE,
   OPT_MFUPTO,
   OPT_MIMEFWD,
@@ -337,7 +338,6 @@ enum
   OPTENCODEFROM,
   OPTENVFROM,
   OPTFASTREPLY,
-  OPTFCCATTACH,
   OPTFCCCLEAR,
   OPTFOLLOWUPTO,
   OPTFORCENAME,
